--- a/Day2/icons.html
+++ b/Day2/icons.html
@@ -10,10 +10,10 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"crossorigin="anonymous"></script>
 </head>
 <body>
-    <i></i>
-    <i></i>
-    <i></i>
-    <i></i>
+    <i class="fas fa-cloud"></i>
+    <i class="fas fa-heart"></i>
+    <i  class="fas fa-heart"></i>
+    <i class="fas fa-heart"></i>
     
 </body>
 </html>
