--- a/Project/animation.html
+++ b/Project/animation.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="animation.css">
 </head>
 <body>
-    <h2 contenteditable="true">HI THIS IS miss developer...</h2>
+    <h2><span>H</span>i,<span>Th</span>is IS <Span>M</Span>iss  <SpAn>d</SpAn>eveloper...</h2>
     
 </body>
 </html>
